--- a/siw-clinica-springboot/src/main/resources/templates/fragments/base.html
+++ b/siw-clinica-springboot/src/main/resources/templates/fragments/base.html
@@ -60,20 +60,9 @@
           <li class="active"><a th:href="@{/default}">Home</a></li>
           <li><a class="drop" href="#">Funzioni</a>
             <ul>
-              <li><a class="drop" href="#">Esami</a>
-                <ul>
-                  <li><a th:href="@{/exam}">Elenco Esami</a></li>
-
-                </ul>
-              </li>
-
-              
-              <li><a class="drop" href="#">Medici</a>
-                <ul>
-                  <li><a th:href="@{/doctor}">Elenco Medici</a></li>
-
-                </ul>
-              </li>
+                  <li><a th:href="@{/exam}">Tipologie Esami</a></li>
+					 <li><a th:href="@{/exam}">Medici</a></li>
+					  <li><a th:href="@{/exam}">Miei Esami</a></li>
               <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
           </li>
