--- a/siw-clinica-springboot/src/main/resources/templates/examForm.html
+++ b/siw-clinica-springboot/src/main/resources/templates/examForm.html
@@ -23,7 +23,23 @@
 		</div>
 
 	<table>
-    	
+    	<tr> 
+    	 <td>				
+			<h6 class="heading"><span>Data Esame:<input type="text" th:field="*{dateExamination}" required/></span></h6>
+			<h6 class="heading"><span th:if="${#fields.hasErrors('dateExamination')}" th:errors="*{dateExamination}"></span></h6>
+        </td>
+        <td>	
+        	<h6 class="heading"><span>
+			<label>Tipo Esame: </label> <select id="typeOfExamination" th:field="*{typeOfExamination}" required>
+			<option th:each="typeOfExamination : ${typeOfExamination}"
+						th:value="${typeOfExamination.id}" th:text="${typeOfExamination.nome}"></option>
+			</select>
+			</span></h6>
+        			
+					<footer><a class="btn" th:href="@{/admin/typeOfExamination}">Inserisci Tipologia</a></footer>
+        </td>
+         
+    	</tr>   
     	<tr>
         <td>				
 			<h6 class="heading"><span>
@@ -43,17 +59,7 @@
         </td>
          
     	</tr>  
-    	<tr> 
-    	 <td>				
-			<h6 class="heading"><span>Risultato:<input type="text" th:field="*{result}" required/></span></h6>
-			<h6 class="heading"><span th:if="${#fields.hasErrors('result')}" th:errors="*{result}"></span></h6>
-        </td>
-        <td>				
-					<h6 class="heading"><span>Tipo Esame<input type="text" th:field="*{typeOfExamination}" required/></span></h6>
-			<h6 class="heading"><span th:if="${#fields.hasErrors('typeOfExamination')}" th:errors="*{typeOfExamination}"></span></h6>	
-        </td>
-         
-    	</tr>   		
+    			
 	</table>
 	<div>
 		<h6 class="heading"><span><button type="submit">Invio</button></span></h6>
