--- a/siw-clinica-springboot/src/main/resources/templates/typeOfExamination.html
+++ b/siw-clinica-springboot/src/main/resources/templates/typeOfExamination.html
@@ -105,9 +105,9 @@
                     
                 </tr>
                 <tr th:each="requirement : ${typeOfExamination.requirements}">
-                    <td th:text="${requirement.id}">ID </td>
-                    <td><a href="requirement.html" th:href="@{'/requirement' + '/' + ${requirement.id}}" >
-	<em th:text="|${requirement.name} ${requirement.description}|">Requisiti</em> </a></td>
+                    <td th:text="${requirement.name}">ID </td>
+                    <td><a   >
+	<em th:text="${requirement.description}">Requisiti</em> </a></td>
                 </tr>
         </table>
    
